More sphinx stuff, maybe this won't work out

--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -1,3 +1,4 @@
 // Ignore sphinx _build folder as working space.
 // Generated documentation html should be moved be served from ./docs.
 _build/*
+xml/
